--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,13 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;600;700&display=swap');
+@import './scss/variables';
+@import './scss/mixins';
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    font-family: 'Lato', sans-serif;
-    color: #1A1C1D;
+    @include reset-list;
 }
+
 body{
     background: #E5E5E5;
 }
 
+.red {
+	color: red;
+}
+.green {
+	color: green;
+}
+.yellow {
+	color: yellow;
+}
