--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;600;700&display=swap');
-@import './scss/variables';
-@import './scss/mixins';
 *{
     @include reset-list;
 }
@@ -17,4 +15,15 @@ body{
 }
 .yellow {
 	color: yellow;
+}
+button {
+	padding: 12px 24px;
+	background-color: $main-color;
+	border: none;
+	border-radius: 6px;
+	color: $whiteColor;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 18px;
+	cursor: pointer;
 }
